<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.civify.activity.MainActivity"
    >
  <LinearLayout
      android:id="@+id/mainLayout"
      android:layout_width="368dp"
      android:layout_height="551dp"
      android:orientation="vertical"
      android:layout_centerVertical="true"
      android:layout_centerHorizontal="true"
      >

    <ImageView
        android:id="@+id/titleView"
        android:layout_width="237dp"
        android:layout_height="145dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:background="@drawable/civify"/>

    <ImageView
        android:id="@+id/logoView"
        android:layout_width="164dp"
        android:layout_height="180dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/logo_planeta"/>

    <LinearLayout
        android:id="@+id/buttonsLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:orientation="vertical"
        >

      <Button
          android:id="@+id/registerButton"
          android:layout_width="180dp"
          android:layout_height="50dp"
          android:layout_gravity="center_horizontal"
          android:background="@drawable/green_bg_button"
          android:text="@string/registration"
          android:textAllCaps="false"
          android:textColor="#ffffff"
          android:textSize="24sp"
          />

      <Button
          android:id="@+id/signInButton"
          android:layout_width="180dp"
          android:layout_height="50dp"
          android:layout_gravity="center_horizontal"
          android:layout_marginTop="10dp"
          android:background="@drawable/green_border_button"
          android:text="@string/sign_in"
          android:textAllCaps="false"
          android:textColor="#27AE60"
          android:textSize="24sp"
          />
    </LinearLayout>
  </LinearLayout>
</RelativeLayout>