...
  <string name="finish">Finish</string>
  <string name="choose_password">Choose a password</string>
  <string name="choose_email">What\'s your email?</string>
  <string name="surname_not_validated">You must enter your surname</string>
  <string name="name_not_validated">You must enter your name</string>
  <string name="signInWith">Sign in with:</string>
  <string name="sign_in">Sign in</string>
  <string name="registration">Register</string>

  <!-- Strings related to login -->
  <string name="prompt_email">Email</string>
  <string name="prompt_password">Password (optional)</string>
  <string name="action_sign_in">Sign in or register</string>
  <string name="action_sign_in_short">Sign in</string>
...
  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>

  <string name="action_settings">Settings</string>
  <string name="achievements">Achievements</string>
  <string name="rewards">Rewards</string>
  <string name="wall">Wall</string>
  <string name="navigate">Navigate</string>
  <string name="about">About</string>
  <string name="settings">Settings</string>
  <string name="profile">Profile</string>
  <string name="events">Events</string>

...
