...
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <android.support.v7.widget.AppCompatButton
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:id="@+id/button1"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/green_bg_button"
        android:text="@string/continue_button"
        android:layout_marginTop="50dp"
        android:textAllCaps="false"
        android:textColor="#ffffff"
...
